--- a/app/views/addlink.html
+++ b/app/views/addlink.html
@@ -1,27 +1,40 @@
 
 
 <div class="container">
-  <h2>Horizontal form</h2>
+  <h2>Add link</h2>
   <form class="form-horizontal" role="form">
+
     <div class="form-group">
-      <label class="control-label col-sm-2" for="email">Email:</label>
+      <label class="control-label col-sm-2" for="email">Title</label>
       <div class="col-sm-10">
-        <input type="email" class="form-control" id="email" placeholder="Enter email">
+        <input type="title" class="form-control" id="title" placeholder="Enter title">
       </div>
     </div>
+
     <div class="form-group">
-      <label class="control-label col-sm-2" for="pwd">Password:</label>
+      <label class="control-label col-sm-2" >Link:</label>
       <div class="col-sm-10">          
-        <input type="password" class="form-control" id="pwd" placeholder="Enter password">
+        <input type="link" class="form-control" id="lnk" placeholder="Enter link">
+      </div> </div>
+
+
+       <div class="form-group">
+      <label class="control-label col-sm-2" >Description:</label>
+
+      <div class="col-sm-10">          
+        <input type="description" class="form-control" id="dscr" placeholder="Enter description">
+      </div></div>
+
+      <div class="form-group">
+        <select data-toggle="select" class="form-control select select-default">
+          <option>Board</option>
+          <option>Blog</option>
+          <option>IRC</option>
+          <option>VPN</option>
+        </select>
       </div>
-    </div>
-    <div class="form-group">        
-      <div class="col-sm-offset-2 col-sm-10">
-        <div class="checkbox">
-          <label><input type="checkbox"> Remember me</label>
-        </div>
-      </div>
-    </div>
+
+    
     <div class="form-group">        
       <div class="col-sm-offset-2 col-sm-10">
         <button type="submit" class="btn btn-default">Submit</button>
