--- a/app/views/addlink.html
+++ b/app/views/addlink.html
@@ -2,19 +2,21 @@
 
 <div class="container">
   <h2>Add link</h2>
+
+
   <form class="form-horizontal" role="form">
 
     <div class="form-group">
       <label class="control-label col-sm-2" for="email">Title</label>
       <div class="col-sm-10">
-        <input type="title" class="form-control" id="title" placeholder="Enter title">
+        <input ng-model="title" type="title" class="form-control" id="title" placeholder="Enter title">
       </div>
     </div>
 
     <div class="form-group">
       <label class="control-label col-sm-2" >Link:</label>
       <div class="col-sm-10">          
-        <input type="link" class="form-control" id="lnk" placeholder="Enter link">
+        <input type="link" ng-model="link" class="form-control" id="lnk" placeholder="Enter link">
       </div> </div>
 
 
@@ -22,22 +24,31 @@
       <label class="control-label col-sm-2" >Description:</label>
 
       <div class="col-sm-10">          
-        <input type="description" class="form-control" id="dscr" placeholder="Enter description">
+        <input type="description" ng-model="descr" class="form-control" id="dscr" placeholder="Enter description">
       </div></div>
 
+      <label class="control-label col-sm-2" >Type:</label>
       <div class="form-group">
-        <select data-toggle="select" class="form-control select select-default">
+        <select data-toggle="select" ng-model="type"class="form-control select select-default">
           <option>Board</option>
           <option>Blog</option>
           <option>IRC</option>
           <option>VPN</option>
         </select>
+      </div>      
+      <label class="control-label col-sm-2" >Language:</label>
+      <div class="form-group">
+        <select data-toggle="select" ng-model="lang" class="form-control select select-default">
+          <option>US</option>
+          <option>FR</option>
+          <option>GR</option>
+          <option>ES</option>
+        </select>
       </div>
 
-    
-    <div class="form-group">        
+    <div class="form-group" >        
       <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button type="submit" ng-click="test()" class="btn btn-default">Submit</button>
       </div>
     </div>
   </form>
