--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,15 +1,21 @@
 
 <br>
 <br>
-<h4>home page</h4>
 
 <div ng-repeat="n in [42, 45, 43, 53,4,5,6,9,8,7,8] track by $index">
 		<div>&nbsp;</div>
 		<div class="panel pan panpanel-default size ">
 		  <div class="panel-heading">
-			<h3 class="panel-title"><a href="http://twitter.com"><span class="flag-icon flag-icon-us"></span> Twitter</a></h3>
+			<h3 class="panel-title pantitle">
+
+
+
+			<a href="http://twitter.com"><span class="flag-icon flag-icon-us"></span> Twitter</a></h3>
+
+
+
 		  </div>
-		  <div class="panel-body">
+		  <div class="panel-body panbod">
 
 
 
@@ -19,3 +25,7 @@
 		  <div class="foot panel-footer"><span class="tag label label-default">#Default</span></div>
 		</div>
 	</div>
+
+
+
+
