--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -7,6 +7,7 @@ body {
 .size {
 	max-width: 1200px;
 	margin: auto;	
+	 z-index: 1;
 
 }
 
@@ -20,14 +21,15 @@ body {
 }
 .pan{
 	margin-bottom:-20px;
-	maxwidth:1000px;
+	max-width:800px;
+	margin
 	position:relative;
-	top:150px;
+	top:25px;
 }
 
 .foot{
 	padding-top: 0px;
-	padding-bottom: 0px;
+	margin-top: -10px;
 }
 .nv{
 	padding-top: 2px;
@@ -47,4 +49,19 @@ margin-left:3px;
 .tab{
 
 }
-
+.panbod{
+	margin-top:-20px;
+}
+.pantitle{
+	margin-top: 0px;
+}
+.tooltip-inner {
+    max-width: 350px;
+    /* If max-width does not work, try using width instead */
+    width: 350px; 
+    height: 650px;
+}
+.popover{
+	max-width: 400px;
+	max-height: 900px;
+}
