--- a/app/views/addlink.html
+++ b/app/views/addlink.html
@@ -48,7 +48,7 @@
 
     <div class="form-group" >        
       <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" ng-click="test()" class="btn btn-default">Submit</button>
+        <button type="submit" ng-click="addLink()" class="btn btn-default">Submit</button>
       </div>
     </div>
   </form>
