--- a/app/views/home.html
+++ b/app/views/home.html
@@ -2,24 +2,22 @@
 <br>
 <br>
 
-<div ng-repeat="n in [42, 45, 43, 53,4,5,6,9,8,7,8] track by $index">
+<div ng-repeat="n in links track by $index">
 		<div>&nbsp;</div>
+
 		<div class="panel pan panpanel-default size ">
 		  <div class="panel-heading">
 			<h3 class="panel-title pantitle">
 
 
 
-			<a href="http://twitter.com"><span class="flag-icon flag-icon-us"></span> Twitter</a></h3>
+			<a href="{{n.link}}"><span class="flag-icon flag-icon-us"></span>{{n.title}}</a></h3>
 
 
 
 		  </div>
 		  <div class="panel-body panbod">
-
-
-
-		Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book
+		  {{n.description}}
 
 		  </div>
 		  <div class="foot panel-footer"><span class="tag label label-default">#Default</span></div>
