--- a/app/views/home.html
+++ b/app/views/home.html
@@ -11,7 +11,7 @@
 
 
 
-			<a href="{{n.link}}"><span class="flag-icon flag-icon-us"></span>{{n.title}}</a></h3>
+			<a href="{{n.link}}"><i class="{{n.lang}} flag"></i></span>{{n.title}}</a></h3>
 
 
 
