--- a/app/views/addlink.html
+++ b/app/views/addlink.html
@@ -24,7 +24,7 @@
       <label class="control-label col-sm-2" >Description:</label>
 
       <div class="col-sm-10">          
-        <input type="description" ng-model="descr" class="form-control" id="dscr" placeholder="Enter description">
+        <input type="description" ng-model="description" class="form-control" id="dscr" placeholder="Enter description">
       </div></div>
 
       <label class="control-label col-sm-2" >Type:</label>
@@ -39,10 +39,10 @@
       <label class="control-label col-sm-2" >Language:</label>
       <div class="form-group">
         <select data-toggle="select" ng-model="lang" class="form-control select select-default">
-          <option>US</option>
-          <option>FR</option>
-          <option>GR</option>
-          <option>ES</option>
+          <option>us</option>
+          <option>fr</option>
+          <option>de</option>
+          <option>es</option>
         </select>
       </div>
 
