--- a/app/views/addlink.html
+++ b/app/views/addlink.html
@@ -5,7 +5,7 @@
 
 
   <form class="form-horizontal" role="form">
-
+  
     <div class="form-group">
       <label class="control-label col-sm-2" for="email">Title</label>
       <div class="col-sm-10">
@@ -16,7 +16,7 @@
     <div class="form-group">
       <label class="control-label col-sm-2" >Link:</label>
       <div class="col-sm-10">          
-        <input type="link" ng-model="link" class="form-control" id="lnk" placeholder="Enter link">
+        <input type="link" ng-blur="getDescription(link)" ng-model="link" class="form-control" id="lnk" placeholder="Enter link">
       </div> </div>
 
 
@@ -29,7 +29,7 @@
 
       <label class="control-label col-sm-2" >Type:</label>
       <div class="form-group">
-        <select data-toggle="select" ng-model="type"class="form-control select select-default">
+        <select data-toggle="select" ng-model="type" class="form-control select select-default">
           <option>Board</option>
           <option>Blog</option>
           <option>IRC</option>
