--- a/app/views/home.html
+++ b/app/views/home.html
@@ -2,6 +2,12 @@
 <br>
 <br>
 
+        <div class="col-md-2">
+          <div class="bootstrap-switch-square">
+            <input type="checkbox" href="/test" data-toggle="switch" data-on-text="<i class='fui-check'></i>" data-off-text="raw"  id="custom-switch-03" />
+          </div></div>
+
+
 <div ng-repeat="n in links track by $index">
 		<div>&nbsp;</div>
 
