--- a/app/views/home.html
+++ b/app/views/home.html
@@ -4,7 +4,7 @@
 
         <div class="col-md-2">
           <div class="bootstrap-switch-square">
-            <input type="checkbox" href="/test" data-toggle="switch" data-on-text="<i class='fui-check'></i>" data-off-text="raw"  id="custom-switch-03" />
+            <input type="checkbox"  data-toggle="switch" data-on-text="<i class='fui-check'></i>" data-off-text="raw"  id="custom-switch-03" />
           </div></div>
 
 
