--- a/app/views/test.html
+++ b/app/views/test.html
@@ -15,7 +15,7 @@
 
 <div ng-repeat="n in links track by $index" bs-popover >
 {{n.title}}
-    <a href="{{n.link}}" title="{{n.title}}" rel="popover" data-content=
+    <a href="{{n.link}}" data-original-title="{{n.title}}" rel="popover" data-content=
 
 
 
