--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -7,72 +7,31 @@ body {
 .size {
 	max-width: 1200px;
 	margin: auto;	
-	 z-index: 1;
-
+	z-index: 1;
 }
 
-.top-space {
-	margin-top: 0px;
-}
 
 .panel:hover {
 	border-color: red;
 
 }
-.pan{
-	margin-bottom:-20px;
-	max-width:800px;
-	margin
-	position:relative;
-	top:25px;
-}
 
-.foot{
-	padding-top: 0px;
-	margin-top: -10px;
-}
-.nv{
-	padding-top: 2px;
-}
-
-.tg{
-margin-top:-8px;
-margin-bottom:0px;
-margin-left:3px;
-
-}
-.tabz{
-	margin-top:10px;
-
-
-}
-.tab{
-	margin-top: 100px;
-
-}
-.panbod{
-	margin-top:-20px;
-}
-.pantitle{
-	margin-top: 0px;
-}
 .tooltip-inner {
     max-width: 350px;
     /* If max-width does not work, try using width instead */
     width: 350px; 
     height: 650px;
 }
+
 .popover{
 	max-width: 400px;
 	max-height: 900px;
 }
+
 .rawTab{
 	border: 1px solid black;
-
 }
-.container {
-  width: 970px !important;
-  }
-.bootstrap-switch-square{
-  	size:2050px;
-  }
+
+.index {
+	margin-top: 80px;
+}
