--- a/app/views/home.html
+++ b/app/views/home.html
@@ -5,11 +5,23 @@
 	<div ng-repeat="n in links track by $index">
 		<div class="panel panpanel-default">
 		  <div class="panel-heading">
-			<h3 class="panel-title pantitle">
+			<h3 class="panel-title pantitle txt">
 
 
 
-			<a href="{{n.link}}"><i class="{{n.lang}} flag"></i></span>{{n.title}}</a></h3>
+			<a href="{{n.link}}"><i class=" {{n.lang}} flag"></i></span>
+			{{n.title}}
+ 		<div style="float: right; width: 50px;">
+ 		<a href="http://yahoo.be" ><span class="glyphicon glyphicon-send txt">Rank </span></a>
+ 		</div>
+		<div>
+
+
+
+
+			</div>
+</a></h3>
+
 
 
 
@@ -18,7 +30,8 @@
 		  {{n.description}}
 
 		  </div>
-		  <div class="foot panel-footer"><span class="tag label label-default">#Default</span></div>
+		  <div class="foot panel-footer"><span class="tag label label-default">
+		  #Default</span></div>
 		</div>
 	</div>
 
