--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -38,11 +38,14 @@ body {
 	background-color: #1E222B !important;
 	transition: width .4s;
 	webkit-transition: width .4s; 
-	  	position: fixed;
+	position: fixed;
+
+
 }
 #eeh-navigation-page-wrapper {
   background-color: transparent !important;
   border: none !important;
+  	width: 1000px !important;
 
 
 }
@@ -53,5 +56,7 @@ body {
 }
 .sidebar{
 	height: 1500px;
+
+
 
 }
