--- a/app/styles/simple-sidebar.css
+++ b/app/styles/simple-sidebar.css
@@ -72,8 +72,8 @@
 
 .sidebar-nav li a:hover {
     text-decoration: none;
-    color: #fff;
-    background: rgba(255,255,255,0.2);
+    color: #1ABC9C;
+
 }
 
 .sidebar-nav li a:active,
@@ -102,7 +102,7 @@
     }
 
     #wrapper.toggled {
-        padding-left: 0;
+        padding-left:0px;
         
     }
 
@@ -116,6 +116,7 @@
 
     #page-content-wrapper {
         padding: 20px;
+
         position: relative;
     }
 
