--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -6,8 +6,13 @@ body {
 	margin: auto;	
 	z-index: 1;
 }
+.panel{
+		width: 500px;
+}
 .panel:hover {
-	border-color: red;
+	box-shadow: 0px 0px 10px 4px rgba(26, 188, 156, 0.75);
+	-moz-box-shadow: 0px 0px 10px 4px rgba(26, 188, 156, 0.75);
+	-webkit-box-shadow: 0px 0px 10px 4px rgba(26, 188, 156, 0.75);
 
 }
 .tooltip-inner {
@@ -100,4 +105,17 @@ body.pml-open nav.push-menu-left {
 }
 body.pml-open #wrapper {
     left: 300px
+}
+
+.fleche{
+	text-align: left;
+}
+.fleched{
+	text-align: right;
+}
+.menutxt{
+	margin-left:-25px;
+}
+.paneltxt{
+	font-size: 80%;
 }
