--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,48 +1,40 @@
 <br/>
-
 <div class="size" ui-view="filters"></div>
-
 <br/>
 <br/>
-
 <div ng-if="show" ng-repeat="n in links track by $index">
-	<div class="panel panpanel-default">
-		<span class="panel-heading">
+	<div class="panel panel-defaul">
 
-			<h3 class="panel-title pantitle txt">
+			<div class="panel-heading">
+				<h3 class="panel-title pantitle ">
 				<a href="{{n.link}}"><i class=" {{n.lang}} flag"></i>
 					{{n.title}}
 					<div style="float: right; width: 50px;">
-						<a href="http://yahoo.be" ><span class="glyphicon glyphicon-send txt">Rank </span></a>
+						<a href="http://yahoo.be" >
+						<span class="glyphicon glyphicon-send ">Rank </span></a>
 					</div>
-					<div>
-					</div>
+
 				</a>
-			</h3>
-		</span>
+				</h3>
+				<hr>
+			</div>
+
 
 		<div class="panel-body paneltxt">
 			{{n.description}}
 		</div>
-
-		<div class="foot panel-footer">
+		<div class=" panel-footer">
 			<span class="tag label label-default">
 				#Default
 			</span>
 		</div>
 	</div>
 </div >
-
 <table class="raw" ng-if="!show">
-
 	<tr ng-repeat="n in links track by $index" bs-popover >
 		<td>
 			<a href="{{n.link}}" data-original-title="{{n.title}}" rel="popover" data-content="{{n.description}}"
 			target="_blank">{{n.title}}</a></td>
 		</tr>
 	</div>
-
 </table>
-
-
-
