Ça commence à ressembler à qq chose (:

--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -8,6 +8,9 @@ body {
 }
 .panel{
 	width: 500px;
+
+
+
 }
 .panel:hover {
 	box-shadow: 0px 0px 10px 4px rgba(26, 188, 156, 0.75);
@@ -121,6 +124,7 @@ body.pml-open #wrapper {
 }
 .panel-body{
 	padding-top: 0;
+	height: 70px;
 }
 .panel-footer{
 	padding-top: 0;
@@ -142,10 +146,10 @@ hr{
 }
 
 .deckgrid .column {
-    float: left;
+
 }
 
-.deckgrid .column-1-2 {
+.deckgrid .column-1-4 {
     width: 25%;
 }
 
