--- a/app/styles/simple-sidebar.css
+++ b/app/styles/simple-sidebar.css
@@ -85,7 +85,8 @@
 }
 
 .sidebar-nav > .sidebar-brand {
-    height: 65px;
+
+    height: 150px;
     font-size: 18px;
     line-height: 60px;
 }
@@ -115,6 +116,13 @@
 
     #wrapper.toggled #sidebar-wrapper {
         width: 60px;
+    }    
+    #wrapper.img #img{
+    margin-left: -30px;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
     }
 
     #page-content-wrapper {
