--- a/app/views/filters.html
+++ b/app/views/filters.html
@@ -1,3 +1,3 @@
-<span ng-click="changeShow()" class="bootstrap-switch-square" >
-	<input type="checkbox" name="switch" data-on-text="Panel" data-off-text="Raw" data-off-color="primary" id="switch" />
+<span class="bootstrap-switch-square" >
+	<input type="checkbox" name="switch" ng-model="show" data-on-text="Panel" data-off-text="Raw" data-off-color="primary" id="switch" />
 </span>
