--- a/app/styles/simple-sidebar.css
+++ b/app/styles/simple-sidebar.css
@@ -7,7 +7,7 @@
  /* Toggle Styles */
 
  #wrapper {
-    padding-left: 0;
+    /*padding-left: 0;*/
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
@@ -16,7 +16,7 @@
 
 #wrapper.toggled {
     /*padding-left: 250px;*/
-    padding-left:105px;
+    /*padding-left:105px;*/
 }
 
 #sidebar-wrapper {
@@ -62,7 +62,7 @@
 }
 
 .sidebar-nav li {
-    text-indent: 5px;
+    text-indent: 4px;
     line-height: 55px;
 }
 
@@ -70,6 +70,14 @@
     display: block;
     text-decoration: none;
     color: #999999;
+}
+
+#wrapper.toggled .sidebar-nav li a span {
+  opacity: 0;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
 }
 
 .sidebar-nav li a:hover {
@@ -88,11 +96,12 @@
 
 .active {
     color: #1ABC9C !important;
+    /*background-color: #2b303b;*/
 }
 
 .sidebar-nav > .sidebar-brand {
 
-    height: 150px;
+    height: 160px;
     font-size: 18px;
     line-height: 60px;
     text-indent: 0px;
@@ -105,10 +114,11 @@
 .sidebar-nav > .sidebar-brand a:hover {
     color: #fff;
     background: none;
+    opacity: 100;
 }
 
 #wrapper #img{
-    margin-left: -0px;
+    margin-left: 0px;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
@@ -125,13 +135,13 @@
 
 
 
-@media(min-width:768px) {
+/*@media(min-width:768px) {*/
     #wrapper {
-        padding-left: 300px;
+        padding-left: 260px;
     }
 
     #wrapper.toggled {
-        padding-left:105px;
+        padding-left:100px;
         
     }
 
@@ -152,5 +162,93 @@
     #wrapper.toggled #page-content-wrapper {
         position: relative;
         margin-right: 0;
+    }
+/*}*/
+
+
+
+.sidebar-nav #one{
+    /*opacity:0;*/
+    -moz-animation: menu 0.5s ease;
+    -webkit-animation: menu 0.5s ease;
+    animation: menu 0.5s ease;
+}
+
+.sidebar-nav #two{
+    -moz-animation: menu 0.5s ease 0.5s;
+    -webkit-animation: menu 0.5s ease 0.5s;
+    animation: menu 0.5s ease 0.5s;
+}
+.sidebar-nav #three{
+    -moz-animation: menu 0.5s ease 1s;
+    -webkit-animation: menu 0.5s ease 1s;
+    animation: menu 0.5s ease 1s;
+}
+.sidebar-nav #four{
+    -moz-animation: menu 0.5s ease 1.5s;
+    -webkit-animation: menu 0.5s ease 1.5s;
+    animation: menu 0.5s ease 1.5s;
+}
+.sidebar-nav #five{
+    -moz-animation: menu 0.5s ease 2s;
+    -webkit-animation: menu 0.5s ease 2s;
+    animation: menu 0.5s ease 2s;
+}
+.sidebar-nav #six{
+    -moz-animation: menu 0.5s ease 2.5s;
+    -webkit-animation: menu 0.5s ease 2.5s;
+    animation: menu 0.5s ease 2.5s;
+}
+.sidebar-nav #seven{
+    -moz-animation: menu 0.5s ease 3s;
+    -webkit-animation: menu 0.5s ease 3s;
+    animation: menu 0.5s ease 3s;
+}
+.sidebar-nav #eight{
+    -moz-animation: menu 0.5s ease 3.5s;
+    -webkit-animation: menu 0.5s ease 3.5s;
+    animation: menu 0.5s ease 3.5s;
+}
+.sidebar-nav #nine{
+    -moz-animation: menu 0.5s ease 4s;
+    -webkit-animation: menu 0.5s ease 4s;
+    animation: menu 0.5s ease 4s;
+}
+/*
+header ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+header ul li{
+    display: inline-block;
+    margin-right: 20px
+}
+*/
+@-moz-keyframes menu {
+    0% {
+        -moz-transform: translateX(220px);
+    }
+    100% {
+        -moz-transform: translateX(0);
+    }
+}
+
+@-webkit-keyframes menu {
+    0% {
+        -webkit-transform: translateX(220px);
+    }
+    100% {
+        -webkit-transform: translateX(0);
+    }
+}
+
+@keyframes menu {
+    0% {
+        transform: translateX(220px);
+    }
+    100% {
+        transform: translateX(0);
     }
 }
