--- a/app/styles/simple-sidebar.css
+++ b/app/styles/simple-sidebar.css
@@ -73,7 +73,7 @@
 }
 
 #wrapper.toggled .sidebar-nav li a span {
-  opacity: 0;
+    opacity: 0;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
@@ -114,7 +114,7 @@
 .sidebar-nav > .sidebar-brand a:hover {
     color: #fff;
     background: none;
-    opacity: 100;
+    /*opacity: 100;*/
 }
 
 #wrapper #img{
@@ -168,51 +168,40 @@
 
 
 .sidebar-nav #one{
-    /*opacity:0;*/
-    -moz-animation: menu 0.5s ease;
-    -webkit-animation: menu 0.5s ease;
-    animation: menu 0.5s ease;
+    opacity: 0;
+    animation: menu 0.3s ease-out 0.5s forwards;
 }
-
 .sidebar-nav #two{
-    -moz-animation: menu 0.5s ease 0.5s;
-    -webkit-animation: menu 0.5s ease 0.5s;
-    animation: menu 0.5s ease 0.5s;
+    opacity: 0;
+    animation: menu 0.3s ease-out 0.8s forwards;
 }
 .sidebar-nav #three{
-    -moz-animation: menu 0.5s ease 1s;
-    -webkit-animation: menu 0.5s ease 1s;
-    animation: menu 0.5s ease 1s;
+    opacity: 0;
+    animation: menu 0.3s ease-out 1.1s forwards;
 }
 .sidebar-nav #four{
-    -moz-animation: menu 0.5s ease 1.5s;
-    -webkit-animation: menu 0.5s ease 1.5s;
-    animation: menu 0.5s ease 1.5s;
+    opacity: 0;
+    animation: menu 0.3s ease-out 1.4s forwards;
 }
 .sidebar-nav #five{
-    -moz-animation: menu 0.5s ease 2s;
-    -webkit-animation: menu 0.5s ease 2s;
-    animation: menu 0.5s ease 2s;
+    opacity: 0;
+    animation: menu 0.3s ease-out 1.7s forwards;
 }
 .sidebar-nav #six{
-    -moz-animation: menu 0.5s ease 2.5s;
-    -webkit-animation: menu 0.5s ease 2.5s;
-    animation: menu 0.5s ease 2.5s;
+    opacity: 0;
+    animation: menu 0.3s ease-out 2s forwards;
 }
 .sidebar-nav #seven{
-    -moz-animation: menu 0.5s ease 3s;
-    -webkit-animation: menu 0.5s ease 3s;
-    animation: menu 0.5s ease 3s;
+    opacity: 0;
+    animation: menu 0.3s ease-out 2.3s forwards;
 }
 .sidebar-nav #eight{
-    -moz-animation: menu 0.5s ease 3.5s;
-    -webkit-animation: menu 0.5s ease 3.5s;
-    animation: menu 0.5s ease 3.5s;
+    opacity: 0;
+    animation: menu 0.3s ease-out 2.6s forwards;
 }
-.sidebar-nav #nine{
-    -moz-animation: menu 0.5s ease 4s;
-    -webkit-animation: menu 0.5s ease 4s;
-    animation: menu 0.5s ease 4s;
+.sidebar-nav #menu-toggle{
+    opacity: 0;
+    animation: menu 0.3s ease-out 2.9s forwards;
 }
 /*
 header ul {
@@ -228,27 +217,39 @@ header ul li{
 */
 @-moz-keyframes menu {
     0% {
-        -moz-transform: translateX(220px);
+        -moz-transform: translateX(200px);
+    }
+    75% {
+        -moz-transform: translateX(-30px);
     }
     100% {
         -moz-transform: translateX(0);
+        opacity: 1;
     }
 }
 
 @-webkit-keyframes menu {
     0% {
-        -webkit-transform: translateX(220px);
+        -webkit-transform: translateX(200px);
+    }
+    75% {
+        -moz-transform: translateX(-30px);
     }
     100% {
         -webkit-transform: translateX(0);
+        opacity: 1;
     }
 }
 
 @keyframes menu {
     0% {
-        transform: translateX(220px);
+        transform: translateX(200px);
+    }
+    75% {
+        -moz-transform: translateX(-30px);
     }
     100% {
         transform: translateX(0);
+        opacity: 1;
     }
 }
