--- a/app/styles/simple-sidebar.css
+++ b/app/styles/simple-sidebar.css
@@ -62,8 +62,8 @@
 }
 
 .sidebar-nav li {
-    text-indent: 4px;
-    line-height: 55px;
+    text-indent: 8px;
+    line-height: 45px;
 }
 
 .sidebar-nav li a {
@@ -72,13 +72,13 @@
     color: #999999;
 }
 
-.sidebar-nav div {
+.sidebar-nav .filter {
     margin-left: 10px;
     text-indent: 6px;
     line-height: 45px;
 }
 
-.sidebar-nav div a {
+.sidebar-nav .filter a {
     display: block;
     text-decoration: none;
     color: #999999;
@@ -156,7 +156,7 @@
 
 /*@media(min-width:768px) {*/
     #wrapper {
-        padding-left: 260px;
+        padding-left: 240px;
     }
 
     #wrapper.toggled {
@@ -165,7 +165,7 @@
     }
 
     #sidebar-wrapper {
-        width: 220px;
+        width: 200px;
     }
 
     #wrapper.toggled #sidebar-wrapper {
@@ -188,39 +188,39 @@
 
 .sidebar-nav #one{
     opacity: 0;
-    animation: menu 0.3s ease-out 0.5s forwards;
+    animation: menu 0.3s ease-out 0.3s forwards;
 }
 .sidebar-nav #two{
     opacity: 0;
-    animation: menu 0.3s ease-out 0.8s forwards;
+    animation: menu 0.3s ease-out 0.45s forwards;
 }
 .sidebar-nav #three{
     opacity: 0;
-    animation: menu 0.3s ease-out 1.1s forwards;
+    animation: menu 0.3s ease-out 0.60s forwards;
 }
 .sidebar-nav #four{
     opacity: 0;
-    animation: menu 0.3s ease-out 1.4s forwards;
+    animation: menu 0.3s ease-out 0.75s forwards;
 }
 .sidebar-nav #five{
     opacity: 0;
-    animation: menu 0.3s ease-out 1.7s forwards;
+    animation: menu 0.3s ease-out 0.9s forwards;
 }
 .sidebar-nav #six{
     opacity: 0;
-    animation: menu 0.3s ease-out 2s forwards;
+    animation: menu 0.3s ease-out 1.05s forwards;
 }
 .sidebar-nav #seven{
     opacity: 0;
-    animation: menu 0.3s ease-out 2.3s forwards;
+    animation: menu 0.3s ease-out 1.2s forwards;
 }
 .sidebar-nav #eight{
     opacity: 0;
-    animation: menu 0.3s ease-out 2.6s forwards;
+    animation: menu 0.3s ease-out 1.35s forwards;
 }
 .sidebar-nav #menu-toggle{
     opacity: 0;
-    animation: menu 0.3s ease-out 2.9s forwards;
+    animation: menu 0.3s ease-out 1.5s forwards;
 }
 
 
@@ -253,10 +253,10 @@
 
 @keyframes menu {
     0% {
-        transform: translateX(200px);
+        transform: translateX(100px);
     }
     75% {
-        -moz-transform: translateX(-30px);
+        -moz-transform: translateX(-20px);
     }
     100% {
         transform: translateX(0);
