--- a/app/styles/simple-sidebar.css
+++ b/app/styles/simple-sidebar.css
@@ -72,17 +72,12 @@
     color: #999999;
 }
 
-.sidebar-nav .filter {
-    margin-left: 10px;
-    text-indent: 6px;
-    line-height: 45px;
+.sidebar-nav li .filter {
+    line-height: 35px ;
 }
 
-.sidebar-nav .filter a {
-    display: block;
-    text-decoration: none;
-    color: #999999;
-    font-size: 15px;
+.sidebar-nav li .filter a {
+    font-size: 13px;
 }
 
 .sidebar-nav div a:hover {
@@ -105,13 +100,11 @@
 
 }
 
-/*
-.sidebar-nav li a:active,
-.sidebar-nav li a:focus {
-    text-decoration: none;
-    color: #1ABC9C;
+
+a:active,a:focus {
+    outline: 0;
 }
-*/
+
 
 .active {
     color: #1ABC9C !important;
