--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -237,3 +237,41 @@ hr{
 .border {
 	border: 2px solid black;
 }
+
+.filter {
+    line-height: 35px !important;
+    text-indent: 0 !important;
+    list-style-type: none;
+    vertical-align: text-bottom;
+}
+
+
+.filter-block {
+    padding-left: 25px;
+}
+
+.filter-select {
+	width: 75%;
+	height: 25px;
+	font-size: 13px;
+	padding-top: 2px;
+	padding-bottom: 2px;
+	display: inline-block;
+	margin-left: 5px;   
+	background: #0F1116;
+    color: #999999;
+}
+
+.filter-select:focus {
+	border-color: #1ABC9C;
+    text-shadow:0 1px 0 rgba(0,0,0,0.4);
+}
+
+.filter-select option {
+	padding-left: 5px;
+}
+
+.filter-select option:hover {
+	background: #1ABC9C !important;
+}
+
