--- a/app/styles/test.less
+++ b/app/styles/test.less
@@ -1,9 +1,7 @@
-
-
-.sidebar-nav #one (
+.sidebar-nav  (
     @name: menu,
     @t: 0.3s,
-    @func: ease,
+    @func: ease
 ){
     opacity: 0;
     -moz-animation: @name @t @func forwards;
