--- a/app/views/home.html
+++ b/app/views/home.html
@@ -11,8 +11,12 @@
 			<a href="{{n.link}}" target="_blank"><i class=" {{n.lang}} flag"></i>
 				{{n.title}}
 			</a>
-			<div data-toggle="tooltip" data-placement="top" title="Alexa rank" style="float: right; width: 50px;">
-				<a  href="http://www.alexa.com/siteinfo/{{n.link}}" target="_blank" ><span class="">{{n.rank}} ({{n.deltaRank < 0 ? n.deltaRank : '+'+n.deltaRank}}) </span></a>
+			<div data-toggle="tooltip" data-placement="top" title="Alexa rank" style="float: right; width: 70px;">
+
+				<a  href="http://www.alexa.com/siteinfo/{{n.link}}" target="_blank" ><span class="">{{n.rank}}({{n.deltaRank < 0 ? n.deltaRank:'+'+n.deltaRank}})</span></a>
+
+				<span  class="glyphicon glyphicon-ok"  style="color:green" ng-show="{{n.isup}}" data-toggle="tooltip" data-placement="top" title="Online"></span>
+				<span  class="glyphicon glyphicon-remove"  style="color:red" ng-hide="{{n.isup}}" data-toggle="tooltip" data-placement="top" title="Offline"></span>
 			</div>
 			</h3>
 		</div>
