Filtres sortBy et hide show links + réarrangement panel view (size, tags..)

--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -8,8 +8,12 @@ body {
 	z-index: 1;
 }
 .panelpanel{
-	width: 500px;
+	width: 325px;
+	display: inline-block;
+    margin-right: 5px;
+    margin-left: 5px;
 }
+
 .panelraw{
 	width: 180px;
 	margin: 5px;
@@ -139,16 +143,17 @@ body.pml-open #wrapper {
 }
 .panel-body{
 	padding-top: 0;
-	height: 70px;
+	height: 85px;
 }
 .panel-footer{
-	padding-top: 0;
-	padding-bottom: 0;
+	padding-top: 2px;
+	padding-bottom: 2px;
 
 }
 
 .tag{
-	padding-bottom:2px;
+	padding-bottom: 2px;
+	padding-top: 3px;
 	margin: 2px;
 }
 
@@ -293,4 +298,9 @@ hr{
 }
 .online{
 	background-color: green;
+}
+
+.checkbox-hide-link {
+	margin-left: 5px;
+	font-size: 10pt;
 }
