--- a/app/views/home.html
+++ b/app/views/home.html
@@ -22,7 +22,7 @@
 			{{n.description}}
 		</div>
 		<div class="foot panel-footer">
-			<a href="" class="tag label label-default" ng-repeat="tag in n.tags">
+			<a href="" class="tag label label-default tag-custom" ng-repeat="tag in n.tags">
 				#{{tag}}
 			</a>
 		</div>
